# click-app

./: .gitignore  README.md
{{cookiecutter.hyphenated}}/: README.md  pyproject.toml
{{cookiecutter.hyphenated}}/.github/workflows/: test.yml
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/: cli.py  logconfig.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/: cli.py
