[project]
name = "{{ cookiecutter.hyphenated }}"
version = "0.1"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "click-default-group",
    "click_spinner",
    "loguru",
]
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/actions"
{% endif %}
[project.entry-points.console_scripts]
{{ cookiecutter.hyphenated }} = "{{ cookiecutter.underscored }}.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff.lint.mccabe]
# Complexity (C901) errors are based on the number of conditional statements, loops, and nested structures within a
# function. High complexity makes code harder to maintain and test. This setting adjusts the acceptable threshold.
max-complexity = 30  # Default is 10

[tool.ruff.lint]
select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes
    "I", # Import order
    "C", # Pylint convention messages
    "R", # Pylint refactor messages
    "W", # Pylint warning messages
    "E", # Pylint error messages
]

ignore = [
    "F601", # Ignore dictionary key literal repeated warning
    "I001", # Ignore import block is un-sorted or un-formatted
    "W293", # Ignore whitespace warning
]
